# bayan_bot

./: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  setup.cfg
.cd/: Dockerfile  docker-compose.yml  startup
migrations/: env.py
migrations/versions/: d83228929a2a_initial.py  d948aa844a66_hashes.py
scripts/: build_bot_image  check_security_pre_commit  check_style_pre_commit  clean  deploy_bot  install  lint  security
src/bayan_bot/: bot.py  conf.py  db.py  image_hashes.py  log.py  run_bot.py  tables.py  types.py
